--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <li><a href="finance.html">財務分析</a></li>
     <li><a href="statistics.html">統計学</a></li>
     <li><a href="marketing.html">マーケティング戦略</a></li>
+     <li><a href="Genspark Guide.html">GenSpark活用ガイド</a></li>
   </ul>
   <p>必要に応じて上記リストに新しい資料へのリンクを追加してください。</p>
 </body>
+
 </html>
