--- a/index.html
+++ b/index.html
@@ -1,19 +1,114 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>カドー業務ポータル</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg: #0b1220;
+      --bg-soft: #0f172a;
+      --card: #111827;
+      --text: #e5e7eb;
+      --muted: #94a3b8;
+      --brand: #60a5fa;
+      --brand-2:#22d3ee;
+      --ring: rgba(96,165,250,.4);
+      --radius: 16px;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Hiragino Kaku Gothic ProN","Noto Sans JP", sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(1200px 400px at 10% -10%, #1e293b 0%, transparent 60%),
+        radial-gradient(900px 300px at 100% 0%, #0ea5e9 0%, transparent 55%),
+        var(--bg);
+    }
+    .wrap{max-width:1080px; margin:0 auto; padding:28px 20px 64px}
+    .hero{
+      position:relative; overflow:hidden;
+      border-radius:calc(var(--radius) + 8px);
+      background:
+        linear-gradient(135deg, rgba(34,211,238,.25), rgba(96,165,250,.2)),
+        linear-gradient(180deg, var(--bg-soft), rgba(17,24,39,.6));
+      padding:40px 28px;
+      box-shadow:0 20px 40px rgba(0,0,0,.35), 0 0 0 1px rgba(148,163,184,.08) inset;
+    }
+    .hero h1{margin:0 0 10px; font-size:clamp(28px,5vw,42px); letter-spacing:.02em}
+    .hero p{margin:0; color:var(--muted); font-size:clamp(14px,2.4vw,16px)}
+    .chips{display:flex; gap:8px; margin-top:18px; flex-wrap:wrap}
+    .chip{
+      font-size:12px; color:#0b1220; font-weight:700; letter-spacing:.04em;
+      background: linear-gradient(90deg, var(--brand), var(--brand-2));
+      padding:6px 10px; border-radius:999px;
+    }
+    .grid{
+      display:grid; gap:16px; margin-top:22px;
+      grid-template-columns:repeat(auto-fit, minmax(240px,1fr));
+    }
+    .card{
+      position:relative; overflow:hidden; border-radius:var(--radius);
+      padding:22px 18px; background:linear-gradient(180deg, #0f172a, #0b1324);
+      box-shadow: 0 8px 24px rgba(0,0,0,.32), 0 0 0 1px rgba(148,163,184,.08) inset;
+      transition: transform .25s ease, box-shadow .25s ease, outline-color .2s;
+      outline:2px solid transparent;
+    }
+    .card:hover{ transform: translateY(-4px); box-shadow:0 16px 36px rgba(0,0,0,.4);}
+    .card h3{margin:6px 0 8px; font-size:18px}
+    .card p{margin:0; color:var(--muted); font-size:14px; line-height:1.5}
+    .card a{ position:absolute; inset:0; }
+    .badge{
+      display:inline-block; color:var(--brand);
+      font-weight:700; font-size:12px; letter-spacing:.06em;
+      border:1px solid rgba(96,165,250,.35); border-radius:999px; padding:4px 8px;
+      background:rgba(2,6,23,.6)
+    }
+    footer{margin-top:28px; color:var(--muted); font-size:12px; text-align:center}
+  </style>
 </head>
 <body>
-  <h1>カドー業務ポータル</h1>
-  <p>このページは業務用の共有資料への入口です。</p>
-  <ul>
-    <li><a href="finance.html">財務分析</a></li>
-    <li><a href="statistics.html">統計学</a></li>
-    <li><a href="marketing.html">マーケティング戦略</a></li>
-     <li><a href="Genspark Guide.html">GenSpark活用ガイド</a></li>
-  </ul>
-  <p>必要に応じて上記リストに新しい資料へのリンクを追加してください。</p>
-</body>
+  <div class="wrap">
+    <header class="hero">
+      <h1>カドー業務ポータル</h1>
+      <p>社内共有資料へのクイックリンク。よく使う資料は下のカードに追加してください。</p>
+      <div class="chips">
+        <span class="chip">TEAM</span>
+        <span class="chip">INTERNAL</span>
+        <span class="chip">UPDATED</span>
+      </div>
+    </header>
 
+    <main class="grid" aria-label="主要リンク">
+      <!-- ここを自分のファイル名に合わせて書き換え -->
+      <article class="card">
+        <span class="badge">FINANCE</span>
+        <h3>財務分析</h3>
+        <p>KPI、BS/PL、キャッシュフローのダッシュボード。</p>
+        <a href="finance.html" aria-label="財務分析へ"></a>
+      </article>
+
+      <article class="card">
+        <span class="badge">DATA</span>
+        <h3>統計学</h3>
+        <p>推定・検定・回帰の基礎まとめとサンプル。</p>
+        <a href="statistics.html" aria-label="統計学へ"></a>
+      </article>
+
+      <article class="card">
+        <span class="badge">STRATEGY</span>
+        <h3>マーケティング戦略</h3>
+        <p>セグメンテーション／4P／ケース資料など。</p>
+        <a href="marketing.html" aria-label="マーケティング戦略へ"></a>
+      </article>
+    </main>
+
+    <footer>© CADO — internal portal</footer>
+  </div>
+</body>
 </html>
