--- a/index.html
+++ b/index.html
@@ -106,11 +106,19 @@
         <p>セグメンテーション／4P／ケース資料など。</p>
         <a href="marketing.html" aria-label="マーケティング戦略へ"></a>
       </article>
+
+      <article class="card">
+        <span class="badge">GUIDE</span>
+        <h3>Genspark ガイド</h3>
+        <p>セットアップから活用までをまとめたガイド。</p>
+        <a href="genspark-guide.html" aria-label="Genspark ガイドへ"></a>
+      </article>
     </main>
 
     <footer>© CADO — internal portal</footer>
   </div>
 </body>
 </html>
+
 
 
