--- a/index.html
+++ b/index.html
@@ -113,12 +113,20 @@
         <p>セットアップから活用までをまとめたガイド。</p>
         <a href="genspark-guide.html" aria-label="Genspark ガイドへ"></a>
       </article>
+
+      <article class="card">
+        <span class="badge">GUIDE</span>
+        <h3>Notion ガイド</h3>
+        <p>セットアップから活用までをまとめたガイド。</p>
+        <a href="notion.html" aria-label="Genspark ガイドへ"></a>
+      </article>
     </main>
 
     <footer>© CADO — internal portal</footer>
   </div>
 </body>
 </html>
+
 
 
 
