--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <span class="badge">GUIDE</span>
         <h3>Notion ガイド</h3>
         <p>セットアップから活用までをまとめたガイド。</p>
-        <a href="notion.html" aria-label="Genspark ガイドへ"></a>
+        <a href="notion-guide.html" aria-label="Genspark ガイドへ"></a>
       </article>
     </main>
 
@@ -126,6 +126,7 @@
   </div>
 </body>
 </html>
+
 
 
 
