--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>カドー業務ポータル</title>
+  <title>cado-portal | リンク集</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -75,59 +75,58 @@
 <body>
   <div class="wrap">
     <header class="hero">
-      <h1>カドー業務ポータル</h1>
-      <p>社内共有資料へのクイックリンク。よく使う資料は下のカードに追加してください。</p>
+      <h1>カドー業務ポータル（リンク集）</h1>
+      <p>社内・研究・学習メモなどの資料リンクです。下のカードから直接開けます。</p>
       <div class="chips">
-        <span class="chip">TEAM</span>
+        <span class="chip">CADO</span>
         <span class="chip">INTERNAL</span>
-        <span class="chip">UPDATED</span>
+        <span class="chip">PORTAL</span>
       </div>
     </header>
 
     <main class="grid" aria-label="主要リンク">
-      <!-- ここを自分のファイル名に合わせて書き換え -->
-      <article class="card">
-        <span class="badge">FINANCE</span>
-        <h3>財務分析</h3>
-        <p>KPI、BS/PL、キャッシュフローのダッシュボード。</p>
-        <a href="finance.html" aria-label="財務分析へ"></a>
-      </article>
+      <!-- ここからカード：必要に応じて増減OK -->
 
       <article class="card">
-        <span class="badge">DATA</span>
-        <h3>統計学</h3>
-        <p>推定・検定・回帰の基礎まとめとサンプル。</p>
-        <a href="statistics.html" aria-label="統計学へ"></a>
-      </article>
-
-      <article class="card">
-        <span class="badge">STRATEGY</span>
-        <h3>マーケティング戦略</h3>
-        <p>セグメンテーション／4P／ケース資料など。</p>
-        <a href="marketing.html" aria-label="マーケティング戦略へ"></a>
+        <span class="badge">AROMA</span>
+        <h3>アロマテラピーと睡眠</h3>
+        <p>香りが睡眠に与える脳科学的メカニズム。</p>
+        <a href="aroma-sleep.html" aria-label="アロマテラピーと睡眠を開く"></a>
       </article>
 
       <article class="card">
         <span class="badge">GUIDE</span>
         <h3>Genspark ガイド</h3>
-        <p>セットアップから活用までをまとめたガイド。</p>
-        <a href="genspark-guide.html" aria-label="Genspark ガイドへ"></a>
+        <p>Gensparkの使い方とメモ。</p>
+        <a href="genspark-guide.html" aria-label="Gensparkガイドを開く"></a>
       </article>
 
       <article class="card">
-        <span class="badge">GUIDE</span>
-        <h3>Notion ガイド</h3>
-        <p>セットアップから活用までをまとめたガイド。</p>
-        <a href="notion-guide.html" aria-label="Genspark ガイドへ"></a>
+        <span class="badge">STATS</span>
+        <h3>統計学ノート</h3>
+        <p>推定・検定・回帰の基礎まとめ。</p>
+        <a href="statistics.html" aria-label="統計学ノートを開く"></a>
       </article>
+
+      <article class="card">
+        <span class="badge">NOTION</span>
+        <h3>Notion活用ガイド</h3>
+        <p>運用ルールやテンプレート集。</p>
+        <a href="notion-guide.html" aria-label="Notionガイドを開く"></a>
+      </article>
+
+      <article class="card">
+        <span class="badge">CLOUD</span>
+        <h3>VPCメモ</h3>
+        <p>ネットワーク構成の要点。</p>
+        <a href="vpc.html" aria-label="VPCメモを開く"></a>
+      </article>
+
+      <!-- ここまでカード -->
     </main>
 
-    <footer>© CADO — internal portal</footer>
+    <footer>© cado-portal — GitHub Pages</footer>
   </div>
 </body>
 </html>
-
-
-
-
 
