--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
         <a href="vpc.html" aria-label="VPCメモを開く"></a>
       </article>
 
+      <article class="card">
+        <span class="badge">CLOUD</span>
+        <h3>netlify-GitHub連携</h3>
+        <p>基本プロセスの解説。</p>
+        <a href="netlify-GitHub.html" aria-label="netlify-GitHub連携を開く"></a>
+      </article>
       <!-- ここまでカード -->
     </main>
 
@@ -129,4 +135,5 @@
   </div>
 </body>
 </html>
+
 
