--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       --muted: #94a3b8;
       --brand: #60a5fa;
       --brand-2:#22d3ee;
-      --ring: rgba(96,165,250,.4);
       --radius: 16px;
     }
     *{box-sizing:border-box}
@@ -26,114 +25,4 @@
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Hiragino Kaku Gothic ProN","Noto Sans JP", sans-serif;
       color:var(--text);
       background:
-        radial-gradient(1200px 400px at 10% -10%, #1e293b 0%, transparent 60%),
-        radial-gradient(900px 300px at 100% 0%, #0ea5e9 0%, transparent 55%),
-        var(--bg);
-    }
-    .wrap{max-width:1080px; margin:0 auto; padding:28px 20px 64px}
-    .hero{
-      position:relative; overflow:hidden;
-      border-radius:calc(var(--radius) + 8px);
-      background:
-        linear-gradient(135deg, rgba(34,211,238,.25), rgba(96,165,250,.2)),
-        linear-gradient(180deg, var(--bg-soft), rgba(17,24,39,.6));
-      padding:40px 28px;
-      box-shadow:0 20px 40px rgba(0,0,0,.35), 0 0 0 1px rgba(148,163,184,.08) inset;
-    }
-    .hero h1{margin:0 0 10px; font-size:clamp(28px,5vw,42px); letter-spacing:.02em}
-    .hero p{margin:0; color:var(--muted); font-size:clamp(14px,2.4vw,16px)}
-    .chips{display:flex; gap:8px; margin-top:18px; flex-wrap:wrap}
-    .chip{
-      font-size:12px; color:#0b1220; font-weight:700; letter-spacing:.04em;
-      background: linear-gradient(90deg, var(--brand), var(--brand-2));
-      padding:6px 10px; border-radius:999px;
-    }
-    .grid{
-      display:grid; gap:16px; margin-top:22px;
-      grid-template-columns:repeat(auto-fit, minmax(240px,1fr));
-    }
-    .card{
-      position:relative; overflow:hidden; border-radius:var(--radius);
-      padding:22px 18px; background:linear-gradient(180deg, #0f172a, #0b1324);
-      box-shadow: 0 8px 24px rgba(0,0,0,.32), 0 0 0 1px rgba(148,163,184,.08) inset;
-      transition: transform .25s ease, box-shadow .25s ease, outline-color .2s;
-      outline:2px solid transparent;
-    }
-    .card:hover{ transform: translateY(-4px); box-shadow:0 16px 36px rgba(0,0,0,.4);}
-    .card h3{margin:6px 0 8px; font-size:18px}
-    .card p{margin:0; color:var(--muted); font-size:14px; line-height:1.5}
-    .card a{ position:absolute; inset:0; }
-    .badge{
-      display:inline-block; color:var(--brand);
-      font-weight:700; font-size:12px; letter-spacing:.06em;
-      border:1px solid rgba(96,165,250,.35); border-radius:999px; padding:4px 8px;
-      background:rgba(2,6,23,.6)
-    }
-    footer{margin-top:28px; color:var(--muted); font-size:12px; text-align:center}
-  </style>
-</head>
-<body>
-  <div class="wrap">
-    <header class="hero">
-      <h1>カドー業務ポータル（リンク集）</h1>
-      <p>社内・研究・学習メモなどの資料リンクです。下のカードから直接開けます。</p>
-      <div class="chips">
-        <span class="chip">CADO</span>
-        <span class="chip">INTERNAL</span>
-        <span class="chip">PORTAL</span>
-      </div>
-    </header>
-
-    <main class="grid" aria-label="主要リンク">
-      <!-- ここからカード：必要に応じて増減OK -->
-
-      <article class="card">
-        <span class="badge">AROMA</span>
-        <h3>アロマテラピーと睡眠</h3>
-        <p>香りが睡眠に与える脳科学的メカニズム。</p>
-        <a href="aroma-sleep.html" aria-label="アロマテラピーと睡眠を開く"></a>
-      </article>
-
-      <article class="card">
-        <span class="badge">GUIDE</span>
-        <h3>Genspark ガイド</h3>
-        <p>Gensparkの使い方とメモ。</p>
-        <a href="genspark-guide.html" aria-label="Gensparkガイドを開く"></a>
-      </article>
-
-      <article class="card">
-        <span class="badge">STATS</span>
-        <h3>統計学ノート</h3>
-        <p>推定・検定・回帰の基礎まとめ。</p>
-        <a href="statistics.html" aria-label="統計学ノートを開く"></a>
-      </article>
-
-      <article class="card">
-        <span class="badge">NOTION</span>
-        <h3>Notion活用ガイド</h3>
-        <p>運用ルールやテンプレート集。</p>
-        <a href="notion-guide.html" aria-label="Notionガイドを開く"></a>
-      </article>
-
-      <article class="card">
-        <span class="badge">CLOUD</span>
-        <h3>VPCメモ</h3>
-        <p>ネットワーク構成の要点。</p>
-        <a href="vpc.html" aria-label="VPCメモを開く"></a>
-      </article>
-
-      <article class="card">
-        <span class="badge">CLOUD</span>
-        <h3>netlify-GitHub連携</h3>
-        <p>基本プロセスの解説。</p>
-        <a href="netlify-GitHub.html" aria-label="netlify-GitHub連携を開く"></a>
-      </article>
-      <!-- ここまでカード -->
-    </main>
-
-    <footer>© cado-portal — GitHub Pages</footer>
-  </div>
-</body>
-</html>
-
-
+        radial-gradient(1200px 400px at 10% -10%, #1e29
