--- a/index.html
+++ b/index.html
@@ -3,26 +3,136 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>cado-portal | リンク集</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <title>カドー業務ポータル（リンク集）</title>
   <style>
+    /* ========= Notion風・極力シンプル ========= */
     :root{
-      --bg: #0b1220;
-      --bg-soft: #0f172a;
-      --card: #111827;
-      --text: #e5e7eb;
-      --muted: #94a3b8;
-      --brand: #60a5fa;
-      --brand-2:#22d3ee;
-      --radius: 16px;
+      --bg: #ffffff;
+      --text: #111827;
+      --muted:#6b7280;
+      --line:#e5e7eb;
+      --accent:#2563eb;
+      --radius:12px;
+      --maxw:880px;
+    }
+    @media (prefers-color-scheme: dark){
+      :root{
+        --bg:#0b0f14; --text:#e5e7eb; --muted:#9aa4b2; --line:#1f2937;
+        --accent:#60a5fa;
+      }
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
       margin:0;
-      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Hiragino Kaku Gothic ProN","Noto Sans JP", sans-serif;
+      background:var(--bg);
       color:var(--text);
-      background:
-        radial-gradient(1200px 400px at 10% -10%, #1e29
+      -webkit-font-smoothing:antialiased;
+      font: 16px/1.7 ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
+            Roboto, "Hiragino Kaku Gothic ProN","Noto Sans JP", "Helvetica Neue", Arial, sans-serif;
+    }
+    .wrap{max-width:var(--maxw); margin:0 auto; padding:48px 20px 72px}
+    header{margin-bottom:28px}
+    h1{
+      margin:0 0 6px;
+      font-size: clamp(26px, 4.6vw, 40px);
+      font-weight: 800;
+      letter-spacing: .01em;
+    }
+    .lead{margin:0; color:var(--muted)}
+    .hr{height:1px; background:var(--line); margin:24px 0}
+
+    /* リンクリスト：Notionっぽく、フラットでシンプル */
+    .list{display:grid; gap:10px; margin-top:14px}
+    .item{
+      display:flex; align-items:center; gap:14px;
+      padding:14px 16px;
+      border:1px solid var(--line);
+      border-radius: var(--radius);
+      text-decoration: none; color: inherit;
+      transition: background .15s ease, border-color .15s ease;
+    }
+    .item:hover{background:#f8fafc}
+    @media (prefers-color-scheme: dark){
+      .item:hover{background:#0f172a}
+    }
+    .dot{
+      flex:0 0 10px; height:10px; border-radius:50%;
+      background: var(--accent); opacity:.9;
+    }
+    .title{font-weight:700}
+    .desc{color:var(--muted); font-size:14px}
+    .spacer{flex:1}
+    .chev{opacity:.35}
+    footer{margin-top:32px; color:var(--muted); font-size:12px; text-align:center}
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <header>
+      <h1>カドー業務ポータル（リンク集）</h1>
+      <p class="lead">社内・研究・学習メモなどの資料リンクです。必要なページを1クリックで開けます。</p>
+    </header>
+
+    <div class="hr" aria-hidden="true"></div>
+
+    <main class="list" aria-label="主要リンク">
+      <a class="item" href="aroma-sleep.html" aria-label="アロマテラピーと睡眠を開く">
+        <span class="dot" aria-hidden="true"></span>
+        <div>
+          <div class="title">アロマテラピーと睡眠</div>
+          <div class="desc">香りが睡眠に与える脳科学的メカニズム</div>
+        </div>
+        <div class="spacer"></div><div class="chev">→</div>
+      </a>
+
+      <a class="item" href="genspark-guide.html" aria-label="Gensparkガイドを開く">
+        <span class="dot" aria-hidden="true"></span>
+        <div>
+          <div class="title">Genspark ガイド</div>
+          <div class="desc">使い方と運用メモ</div>
+        </div>
+        <div class="spacer"></div><div class="chev">→</div>
+      </a>
+
+      <a class="item" href="statistics.html" aria-label="統計学ノートを開く">
+        <span class="dot" aria-hidden="true"></span>
+        <div>
+          <div class="title">統計学ノート</div>
+          <div class="desc">推定・検定・回帰の基礎まとめ</div>
+        </div>
+        <div class="spacer"></div><div class="chev">→</div>
+      </a>
+
+      <a class="item" href="notion-guide.html" aria-label="Notionガイドを開く">
+        <span class="dot" aria-hidden="true"></span>
+        <div>
+          <div class="title">Notion活用ガイド</div>
+          <div class="desc">運用ルールとテンプレート集</div>
+        </div>
+        <div class="spacer"></div><div class="chev">→</div>
+      </a>
+
+      <a class="item" href="vpc.html" aria-label="VPCメモを開く">
+        <span class="dot" aria-hidden="true"></span>
+        <div>
+          <div class="title">VPCメモ</div>
+          <div class="desc">ネットワーク構成の要点</div>
+        </div>
+        <div class="spacer"></div><div class="chev">→</div>
+      </a>
+
+      <a class="item" href="netlify-GitHub.html" aria-label="netlify-GitHub連携を開く">
+        <span class="dot" aria-hidden="true"></span>
+        <div>
+          <div class="title">Netlify × GitHub 連携</div>
+          <div class="desc">基本プロセスの解説</div>
+        </div>
+        <div class="spacer"></div><div class="chev">→</div>
+      </a>
+    </main>
+
+    <footer>© cado-portal — GitHub Pages</footer>
+  </div>
+</body>
+</html>
