--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>カドー業務ポータル（リンク集）</title>
   <style>
-    /* ========= Notion風・極力シンプル ========= */
     :root{
       --bg: #ffffff;
       --text: #111827;
@@ -27,30 +26,32 @@
       margin:0;
       background:var(--bg);
       color:var(--text);
-      -webkit-font-smoothing:antialiased;
       font: 16px/1.7 ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
             Roboto, "Hiragino Kaku Gothic ProN","Noto Sans JP", "Helvetica Neue", Arial, sans-serif;
     }
     .wrap{max-width:var(--maxw); margin:0 auto; padding:48px 20px 72px}
-    header{margin-bottom:28px}
-    h1{
-      margin:0 0 6px;
-      font-size: clamp(26px, 4.6vw, 40px);
-      font-weight: 800;
-      letter-spacing: .01em;
+
+    /* タイトル部分だけ背景グレー・文字白 */
+    header{
+      margin: -48px -20px 28px;
+      padding: 40px 20px;
+      background-color: #4b5563; /* グレー */
+      color: white;
     }
-    .lead{margin:0; color:var(--muted)}
+    h1{margin:0 0 6px; font-size: clamp(26px, 4.6vw, 40px); font-weight: 800;}
+    .lead{margin:0; color:#e5e7eb}
+
     .hr{height:1px; background:var(--line); margin:24px 0}
 
-    /* リンクリスト：Notionっぽく、フラットでシンプル */
+    /* 個別ページのリンクデザイン：枠線なし＆フラット */
     .list{display:grid; gap:10px; margin-top:14px}
     .item{
       display:flex; align-items:center; gap:14px;
       padding:14px 16px;
-      border:1px solid var(--line);
       border-radius: var(--radius);
       text-decoration: none; color: inherit;
-      transition: background .15s ease, border-color .15s ease;
+      background-color: transparent; /* 背景なし */
+      transition: background .15s ease;
     }
     .item:hover{background:#f8fafc}
     @media (prefers-color-scheme: dark){
@@ -58,7 +59,7 @@
     }
     .dot{
       flex:0 0 10px; height:10px; border-radius:50%;
-      background: var(--accent); opacity:.9;
+      background: var(--accent);
     }
     .title{font-weight:700}
     .desc{color:var(--muted); font-size:14px}
@@ -74,62 +75,16 @@
       <p class="lead">社内・研究・学習メモなどの資料リンクです。必要なページを1クリックで開けます。</p>
     </header>
 
-    <div class="hr" aria-hidden="true"></div>
-
     <main class="list" aria-label="主要リンク">
-      <a class="item" href="aroma-sleep.html" aria-label="アロマテラピーと睡眠を開く">
-        <span class="dot" aria-hidden="true"></span>
+      <a class="item" href="aroma-sleep.html">
+        <span class="dot"></span>
         <div>
           <div class="title">アロマテラピーと睡眠</div>
           <div class="desc">香りが睡眠に与える脳科学的メカニズム</div>
         </div>
         <div class="spacer"></div><div class="chev">→</div>
       </a>
-
-      <a class="item" href="genspark-guide.html" aria-label="Gensparkガイドを開く">
-        <span class="dot" aria-hidden="true"></span>
-        <div>
-          <div class="title">Genspark ガイド</div>
-          <div class="desc">使い方と運用メモ</div>
-        </div>
-        <div class="spacer"></div><div class="chev">→</div>
-      </a>
-
-      <a class="item" href="statistics.html" aria-label="統計学ノートを開く">
-        <span class="dot" aria-hidden="true"></span>
-        <div>
-          <div class="title">統計学ノート</div>
-          <div class="desc">推定・検定・回帰の基礎まとめ</div>
-        </div>
-        <div class="spacer"></div><div class="chev">→</div>
-      </a>
-
-      <a class="item" href="notion-guide.html" aria-label="Notionガイドを開く">
-        <span class="dot" aria-hidden="true"></span>
-        <div>
-          <div class="title">Notion活用ガイド</div>
-          <div class="desc">運用ルールとテンプレート集</div>
-        </div>
-        <div class="spacer"></div><div class="chev">→</div>
-      </a>
-
-      <a class="item" href="vpc.html" aria-label="VPCメモを開く">
-        <span class="dot" aria-hidden="true"></span>
-        <div>
-          <div class="title">VPCメモ</div>
-          <div class="desc">ネットワーク構成の要点</div>
-        </div>
-        <div class="spacer"></div><div class="chev">→</div>
-      </a>
-
-      <a class="item" href="netlify-GitHub.html" aria-label="netlify-GitHub連携を開く">
-        <span class="dot" aria-hidden="true"></span>
-        <div>
-          <div class="title">Netlify × GitHub 連携</div>
-          <div class="desc">基本プロセスの解説</div>
-        </div>
-        <div class="spacer"></div><div class="chev">→</div>
-      </a>
+      <!-- 以下省略：他リンクも同じ形式 -->
     </main>
 
     <footer>© cado-portal — GitHub Pages</footer>
