--- a/index.html
+++ b/index.html
@@ -146,7 +146,16 @@
             <span class="arrow">→</span>
           </a>
         </li>
-
+<li>
+  <a class="item" href="seo-training.pdf" target="_blank" aria-label="SEO基礎講習会PDFを開く">
+    <span class="dot"></span>
+    <div class="meta">
+      <h3>SEO基礎講習会</h3>
+      <p>初心者向けSEOの基本と実践ポイント。</p>
+    </div>
+    <span class="arrow">→</span>
+  </a>
+</li>
         <li>
           <a class="item" href="netlify-GitHub.html" aria-label="Netlify-GitHub連携を開く">
             <span class="dot"></span>
@@ -164,5 +173,6 @@
   </div>
 </body>
 </html>
+
 
 
