--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <a class="item" href="aroma-sleep.html" aria-label="アロマテラピーと睡眠を開く">
             <span class="dot"></span>
             <div class="meta">
-              <h3>アロマテラピーと睡眠</h3>
+              <h3>🔗アロマテラピーと睡眠</h3>
               <p>香りが睡眠に与える脳科学的メカニズム。</p>
             </div>
             <span class="arrow">→</span>
@@ -107,7 +107,7 @@
           <a class="item" href="genspark-guide.html" aria-label="Gensparkガイドを開く">
             <span class="dot"></span>
             <div class="meta">
-              <h3>Genspark ガイド</h3>
+              <h3>🔗Genspark ガイド</h3>
               <p>Gensparkの使い方とメモ。</p>
             </div>
             <span class="arrow">→</span>
@@ -118,7 +118,7 @@
           <a class="item" href="statistics.html" aria-label="統計学ノートを開く">
             <span class="dot"></span>
             <div class="meta">
-              <h3>統計学ノート</h3>
+              <h3>🔗統計学ノート</h3>
               <p>推定・検定・回帰の基礎まとめ。</p>
             </div>
             <span class="arrow">→</span>
@@ -129,7 +129,7 @@
           <a class="item" href="notion-guide.html" aria-label="Notion活用ガイドを開く">
             <span class="dot"></span>
             <div class="meta">
-              <h3>Notion活用ガイド</h3>
+              <h3>🔗Notion活用ガイド</h3>
               <p>運用ルールやテンプレート集。</p>
             </div>
             <span class="arrow">→</span>
@@ -140,7 +140,7 @@
           <a class="item" href="vpc.html" aria-label="VPCメモを開く">
             <span class="dot"></span>
             <div class="meta">
-              <h3>VPCメモ</h3>
+              <h3>🔗VPCメモ</h3>
               <p>ネットワーク構成の要点。</p>
             </div>
             <span class="arrow">→</span>
@@ -150,7 +150,7 @@
   <a class="item" href="seo-training.pdf" target="_blank" aria-label="SEO基礎講習会PDFを開く">
     <span class="dot"></span>
     <div class="meta">
-      <h3>SEO基礎講習会</h3>
+      <h3>📄SEO基礎講習会</h3>
       <p>初心者向けSEOの基本と実践ポイント。</p>
     </div>
     <span class="arrow">→</span>
@@ -160,7 +160,7 @@
           <a class="item" href="netlify-GitHub.html" aria-label="Netlify-GitHub連携を開く">
             <span class="dot"></span>
             <div class="meta">
-              <h3>Netlify × GitHub 連携手順</h3>
+              <h3>🔗Netlify × GitHub 連携手順</h3>
               <p>超シンプルに公開URLを作るまで。</p>
             </div>
             <span class="arrow">→</span>
@@ -173,6 +173,7 @@
   </div>
 </body>
 </html>
+
 
 
 
